syntax = "proto3";

package user.methods;

option go_package = "github.com/Yux77Yux/platform_backend/generated/user";

import "user/messages/follow.proto";
import "user/messages/user.proto";
import "user/messages/user_login.proto";
import "user/messages/user_credentials.proto";

import "common/user_creation_comment.proto";
import "common/api_response.proto";


message GetFollowRequest {
  int64 user_id = 1;
  int32 page = 2;
}

message GetFollowResponse{
  common.ApiResponse msg = 1;
  repeated common.UserCreationComment users = 2;
  bool master = 3;
}

message GetUsersRequest{
  repeated int64 ids = 1;
}

message GetUsersResponse {
  repeated common.UserCreationComment users = 1;
  common.ApiResponse msg = 2;
}

message ExistFolloweeRequest {
  user.messages.Follow follow = 1;
}

message ExistFolloweeResponse {
  bool exist = 1;
  common.ApiResponse msg = 2;
}

message GetUserRequest {
  int64 user_id = 1;
}

message GetUserResponse {
  user.messages.User user = 1;
  common.ApiResponse msg = 2;
}

message LoginRequest{
    user.messages.UserCredentials user_credentials = 1;
}

message LoginResponse{
    user.messages.UserLogin user_login = 1;
    common.ApiResponse msg = 2;
}